--- a/index.html
+++ b/index.html
@@ -28,25 +28,29 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-  <body class="font-sans p-8 bg-slate-300">
-    <nav class="flex justify-between bg-white p-5 rounded-3xl items-center">
-      <div class="navTitle flex justify-center items-center gap-4">
-        <img src="logo.svg" alt="logo" class="size-9" />
-        <p>Expenzia: Expense Tracker</p>
-      </div>
+  <body class="font-sans text-lg p-8 bg-slate-300">
+    <section>
+      <nav class="flex justify-between bg-white p-6 rounded-3xl items-center">
+        <div class="navTitle flex justify-center items-center gap-4">
+          <img src="logo.svg" alt="logo" class="size-9" />
+          <p class="text-[23px]">
+            <span class="font-bold">Expenzia:</span> Expense Tracker
+          </p>
+        </div>
 
-      <div class="navListButton flex gap-4 items-center">
-        <div class="navList">
-          <ul class="flex gap-4">
-            <li>Benefits</li>
-            <li>Features</li>
-            <li>How it works</li>
-          </ul>
+        <div class="navListButton flex gap-8 items-center">
+          <div class="navList">
+            <ul class="flex gap-6">
+              <li>Benefits</li>
+              <li>Features</li>
+              <li>How it works</li>
+            </ul>
+          </div>
+          <div class="navButton bg-black p-5 text-white rounded-3xl text-base">
+            <button>Download app</button>
+          </div>
         </div>
-        <div class="navButton bg-black p-4 text-white rounded-3xl">
-          <button>Download app</button>
-        </div>
-      </div>
-    </nav>
+      </nav>
+    </section>
   </body>
 </html>
