--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
 
   <body class="font-sans text-lg p-8 bg-slate-300">
-    <section>
+    <section class="w-4/6 mx-auto">
       <nav class="flex justify-between bg-white p-6 rounded-3xl items-center">
         <div class="navTitle flex justify-center items-center gap-4">
           <img src="logo.svg" alt="logo" class="size-9" />
@@ -51,6 +51,9 @@
           </div>
         </div>
       </nav>
+    </section>
+    <section class="first page">
+
     </section>
   </body>
 </html>
