--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Expenzia</title>
-
+    <!-- Load custom CSS -->
+    <link rel="stylesheet" href="style.css" />
     <!-- Load Google Fonts first -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -28,9 +29,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-  
-  <body class="font-sans text-lg p-8 bg-slate-300">
-    <section class="w-4/6 mx-auto">
+  <body class="font-sans text-lg p-8 bg-T">
+    <section class="w-4/6 mx-auto rounded-2xl shadow-xl">
       <nav class="flex justify-between bg-white p-6 rounded-3xl items-center">
         <div class="navTitle flex justify-center items-center gap-4">
           <img src="logo.svg" alt="logo" class="size-9" />
@@ -53,8 +53,17 @@
         </div>
       </nav>
     </section>
-    <section class="first page">
-
+    <section class="hero w-4/6 mx-auto">
+      <div class="heroText flex justify-center items-center flex-col w-2/3 mx-56">
+        <div class="mainText font-bold text-7xl text-center">
+          <p>Take control of your finances.</p>
+        </div>
+        <div class="subText text-center">
+          Spend less time worrying about your expenses and focus on becoming
+          financially stable with our easy to use AI-powered expense tracker.
+        </div>
+        <div class="heroButton"></div>
+      </div>
     </section>
   </body>
 </html>
