--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
   </head>
 
   <body class="font-sans text-lg p-8 bg-T">
-    <section class="w-4/6 mx-auto rounded-2xl shadow-xl">
+    <!-- Nav Bar -->
+    <section class="w-4/6 mx-auto rounded-full shadow-xl">
       <nav class="flex justify-between bg-white p-6 rounded-3xl items-center">
         <div class="navTitle flex justify-center items-center gap-4">
           <img src="logo.svg" alt="logo" class="size-9" />
@@ -47,22 +48,160 @@
               <li>How it works</li>
             </ul>
           </div>
-          <div class="navButton bg-black p-5 text-white rounded-3xl text-base">
+          <div class="navButton bg-black p-5 text-white rounded-full text-base">
             <button>Download app</button>
           </div>
         </div>
       </nav>
     </section>
-    <section class="hero w-4/6 mx-auto">
-      <div class="heroText flex justify-center items-center flex-col w-2/3 mx-56">
+
+    <!-- Hero Section -->
+    <section
+      class="hero w-4/6 mx-auto my-20 flex flex-col justify-center items-center gap-10"
+    >
+      <div
+        class="heroText flex justify-center items-center flex-col w-2/3 mx-auto gap-10"
+      >
         <div class="mainText font-bold text-7xl text-center">
           <p>Take control of your finances.</p>
         </div>
-        <div class="subText text-center">
+        <div class="subText text-center opacity-50">
           Spend less time worrying about your expenses and focus on becoming
           financially stable with our easy to use AI-powered expense tracker.
         </div>
-        <div class="heroButton"></div>
+        <div class="heroButton">
+          <button
+            class="bg-[#f8e600] px-9 py-4 rounded-full font-medium shadow-lg"
+          >
+            Download app
+          </button>
+        </div>
+      </div>
+      <div class="heroImg" style="width: 924px">
+        <img src="hero-image.png" alt="" />
+      </div>
+    </section>
+
+    <!-- Second Page -->
+    <section
+      class="secondPage w-4/6 mx-auto mt-48 flex justify-center items-center gap-10 bg-gray-100 rounded-3xl p-10"
+    >
+      <div class="secondPage flex justify-center flex-col w-2/3 mx-auto gap-10">
+        <div class="mainText font-bold text-5xl">
+          <p>Make smarter financial decisions</p>
+        </div>
+        <div class="subText opacity-50">
+          Expenzia makes managing your money simple and fun, helping you
+          understand your expenses and make smarter financial choices.
+        </div>
+        <div class="secondPageButton">
+          <button
+            class="bg-black text-white px-9 py-4 rounded-full font-medium shadow-lg"
+          >
+            Download app
+          </button>
+        </div>
+      </div>
+      <div class="secondPageImg" style="width: 924px">
+        <img src="Second-page-image.png" alt="" />
+      </div>
+    </section>
+
+    <!-- Third Page -->
+    <section
+      class="thirdPage mx-auto mt-48 flex justify-center items-center gap-10"
+    >
+      <div class="thirdPageImg">
+        <img
+          src="Third-page-image.png"
+          alt=""
+          class="bg-[#f8e600] thirdImagePadding rounded-2xl"
+        />
+      </div>
+      <div class="thirdPageOthers">
+        <p class="mainText font-bold text-5xl mb-11">
+          Tired of reckless spending habits?
+        </p>
+        <div class="card flex">
+          <div class="card1 flex gap-10">
+          <div class="card11 w-[280px] flex flex-col gap-2">
+            <div
+              class="card11Img w-[72px] h-[72px] flex justify-center bg-[#f8e600] rounded-full"
+            >
+              <img
+                width="32"
+                height="20"
+                src="money-01-stroke-rounded.svg"
+                alt=""
+              />
+            </div>
+            <p>
+              <span class="font-semibold">Spend your hard earned money</span> 
+              <span class="opacity-50">with peace of mind and think more
+              clearly with no stress.</span>
+            </p>
+          </div>
+          <div class="card11 w-[280px] flex flex-col gap-2">
+            <div
+              class="card11Img w-[72px] h-[72px] flex justify-center bg-[#f8e600] rounded-full"
+            >
+              <img
+                width="32"
+                height="20"
+                src="piggy-bank-stroke-rounded.svg"
+                alt=""
+              />
+            </div>
+            <p>
+              <span class="font-semibold">Save up more money</span> 
+              <span class="opacity-50">to buy that house, car or whatever your financial goals are.</span>
+            </p>
+          </div>
+          </div>
+        </div>
+        <div class="m-7"></div>
+        <div class="card2 flex gap-10">
+          <div class="card21 w-[280px] flex flex-col gap-2">
+            <div
+              class="card21Img w-[72px] h-[72px] flex justify-center bg-[#f8e600] rounded-full"
+            >
+              <img
+                width="32"
+                height="20"
+                src="tax.8ab97f20.svg"
+                alt=""
+              />
+            </div>
+            <p>
+              <span class="font-semibold">Reap the benefits of business tax write-offs,</span> 
+              <span class="opacity-50"> and account for all the business expenses incurred by your company.</span>
+            </p>
+          </div>
+          <div class="card22 w-[280px] flex flex-col gap-2">
+            <div
+              class="card22Img w-[72px] h-[72px] flex justify-center bg-[#f8e600] rounded-full"
+            >
+              <img
+                width="32"
+                height="20"
+                src="family.c9306245.svg"
+                alt=""
+              />
+            </div>
+            <p>
+              <span class="font-semibold">Support your family</span> 
+              <span class="opacity-50">and grow your business without feeling any burden.</span>
+            </p>
+          </div>
+          </div>
+          <div class="thirdPageButton mt-12">
+            <button
+              class="bg-black text-white px-9 py-4 rounded-full font-medium shadow-lg"
+            >
+              Download app
+            </button>
+          </div>
+        </div>
       </div>
     </section>
   </body>
