fourth Section ongoing

--- a/index.html
+++ b/index.html
@@ -124,39 +124,44 @@
         </p>
         <div class="card flex">
           <div class="card1 flex gap-10">
-          <div class="card11 w-[280px] flex flex-col gap-2">
-            <div
-              class="card11Img w-[72px] h-[72px] flex justify-center bg-[#f8e600] rounded-full"
-            >
-              <img
-                width="32"
-                height="20"
-                src="money-01-stroke-rounded.svg"
-                alt=""
-              />
+            <div class="card11 w-[280px] flex flex-col gap-2">
+              <div
+                class="card11Img w-[72px] h-[72px] flex justify-center bg-[#f8e600] rounded-full"
+              >
+                <img
+                  width="32"
+                  height="20"
+                  src="money-01-stroke-rounded.svg"
+                  alt=""
+                />
+              </div>
+              <p>
+                <span class="font-semibold">Spend your hard earned money</span>
+                <span class="opacity-50"
+                  >with peace of mind and think more clearly with no
+                  stress.</span
+                >
+              </p>
             </div>
-            <p>
-              <span class="font-semibold">Spend your hard earned money</span> 
-              <span class="opacity-50">with peace of mind and think more
-              clearly with no stress.</span>
-            </p>
-          </div>
-          <div class="card11 w-[280px] flex flex-col gap-2">
-            <div
-              class="card11Img w-[72px] h-[72px] flex justify-center bg-[#f8e600] rounded-full"
-            >
-              <img
-                width="32"
-                height="20"
-                src="piggy-bank-stroke-rounded.svg"
-                alt=""
-              />
+            <div class="card11 w-[280px] flex flex-col gap-2">
+              <div
+                class="card11Img w-[72px] h-[72px] flex justify-center bg-[#f8e600] rounded-full"
+              >
+                <img
+                  width="32"
+                  height="20"
+                  src="piggy-bank-stroke-rounded.svg"
+                  alt=""
+                />
+              </div>
+              <p>
+                <span class="font-semibold">Save up more money</span>
+                <span class="opacity-50"
+                  >to buy that house, car or whatever your financial goals
+                  are.</span
+                >
+              </p>
             </div>
-            <p>
-              <span class="font-semibold">Save up more money</span> 
-              <span class="opacity-50">to buy that house, car or whatever your financial goals are.</span>
-            </p>
-          </div>
           </div>
         </div>
         <div class="m-7"></div>
@@ -165,41 +170,128 @@
             <div
               class="card21Img w-[72px] h-[72px] flex justify-center bg-[#f8e600] rounded-full"
             >
-              <img
-                width="32"
-                height="20"
-                src="tax.8ab97f20.svg"
-                alt=""
-              />
+              <img width="32" height="20" src="tax.8ab97f20.svg" alt="" />
             </div>
             <p>
-              <span class="font-semibold">Reap the benefits of business tax write-offs,</span> 
-              <span class="opacity-50"> and account for all the business expenses incurred by your company.</span>
+              <span class="font-semibold"
+                >Reap the benefits of business tax write-offs,</span
+              >
+              <span class="opacity-50">
+                and account for all the business expenses incurred by your
+                company.</span
+              >
             </p>
           </div>
           <div class="card22 w-[280px] flex flex-col gap-2">
             <div
               class="card22Img w-[72px] h-[72px] flex justify-center bg-[#f8e600] rounded-full"
             >
+              <img width="32" height="20" src="family.c9306245.svg" alt="" />
+            </div>
+            <p>
+              <span class="font-semibold">Support your family</span>
+              <span class="opacity-50"
+                >and grow your business without feeling any burden.</span
+              >
+            </p>
+          </div>
+        </div>
+        <div class="thirdPageButton mt-12">
+          <button
+            class="bg-black text-white px-9 py-4 rounded-full font-medium shadow-lg"
+          >
+            Download app
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <!-- Fourth Section -->
+    <section class="fourthSection w-4/6 mx-auto mt-48">
+      <div class="fourthSectionText">
+        <p class="text-center font-bold text-5xl">
+          Don't let your money control you
+        </p>
+      </div>
+      <div class="fourthSectionCards mt-24">
+        <div class="fsCards1 flex justify-center items-center gap-10 py-11">
+          <div
+            class="fscard11 bg-orange-50 p-20 rounded-2xl flex flex-col gap-28 shadow-xl"
+          >
+            <div class="fscard11Text">
+              <p class="font-semibold text-2xl font-sans">Snap or Forward</p>
+              <p class="opacity-50 text-base">
+                Simply take a photo of your receipt with your phone or forward
+                it directly to your Expenzia email address.
+              </p>
+            </div>
+            <img width="446" height="317" src="snap.e8af93f7.svg" alt="" />
+          </div>
+          <div
+            class="fscard12 bg-orange-50 rounded-2xl flex flex-col gap-28 shadow-xl"
+          >
+            <div class="fscard12Text fourthTextPadding">
+              <p class="font-semibold text-2xl font-sans">AI Extraction</p>
+              <p class="opacity-50 text-base">
+                Our AI engine instantly extracts key information from your
+                receipt, including the amount, merchant, date, and even product
+                details.
+              </p>
+            </div>
+            <img src="ai.e5700d21.svg" alt="" />
+          </div>
+        </div>
+        <div class="fsCards2 flex justify-center items-center gap-10">
+          <div
+            class="fscard21 bg-orange-50 p-20 rounded-2xl flex flex-col gap-28 shadow-xl"
+          >
+            <div class="fscard21Text">
+              <p class="font-semibold text-2xl font-sans">
+                Chat with your expense data
+              </p>
+              <p class="opacity-50 text-base">
+                Gain valuable insights and patterns on your expenses with our AI
+                to make more informed financial decisions.
+              </p>
+            </div>
+            <img width="446" height="317" src="chat.a24f70cf.svg" alt="" />
+          </div>
+          <div
+            class="fscard22 bg-orange-50 rounded-2xl flex flex-col items-center gap-20 shadow-xl"
+          >
+            <div class="fscard22Text fourthTextPadding">
+              <p class="font-semibold text-2xl font-sans">
+                All your analytics in one dashboard
+              </p>
+              <p class="opacity-50 text-base">
+                Access detailed reports and charts to visualize your expenses,
+                helping you gain valuable insights into your financial behavior.
+              </p>
+            </div>
+            <div class="fscard22Img p-10">
               <img
-                width="32"
-                height="20"
-                src="family.c9306245.svg"
+                width="270"
+                height="356"
+                src="dashboard.769a91c7.svg"
                 alt=""
               />
             </div>
-            <p>
-              <span class="font-semibold">Support your family</span> 
-              <span class="opacity-50">and grow your business without feeling any burden.</span>
-            </p>
           </div>
+        </div>
+        <div class="fsCards3 flex">
+          <div class="fscards3Others">
+            <div class="fsCards3Text">
+              <p>Smart Categorization</p>
+              <p>
+                Expense AI automatically categorizes your expenses, making it
+                easier to analyze your spending habits and identify areas for
+                savings.
+              </p>
+              <button>Download app</button>
+            </div>
           </div>
-          <div class="thirdPageButton mt-12">
-            <button
-              class="bg-black text-white px-9 py-4 rounded-full font-medium shadow-lg"
-            >
-              Download app
-            </button>
+          <div class="fscards3Image">
+            <img src="smart.9cc847c6.svg" alt="">
           </div>
         </div>
       </div>
