Sixth section ongoing

--- a/index.html
+++ b/index.html
@@ -278,23 +278,126 @@
             </div>
           </div>
         </div>
-        <div class="fsCards3 flex">
+        <div
+          class="fsCards3 flex bg-orange-50 rounded-xl shadow-2xl p-10 my-10"
+        >
           <div class="fscards3Others">
-            <div class="fsCards3Text">
-              <p>Smart Categorization</p>
-              <p>
+            <div
+              class="fsCards3Text flex flex-col justify-center items-start gap-11"
+            >
+              <p class="mt-10 font-semibold text-2xl">Smart Categorization</p>
+              <p class="opacity-50">
                 Expense AI automatically categorizes your expenses, making it
                 easier to analyze your spending habits and identify areas for
                 savings.
               </p>
-              <button>Download app</button>
+              <button
+                class="fsButton bg-black text-white px-10 py-5 rounded-full"
+              >
+                Download app
+              </button>
             </div>
           </div>
-          <div class="fscards3Image">
-            <img src="smart.9cc847c6.svg" alt="">
+          <div class="fscards3Image w-[1104px]">
+            <img src="smart.9cc847c6.svg" alt="" />
           </div>
         </div>
       </div>
     </section>
+
+    <!-- 5th Section -->
+    <section
+      class="fifthPage w-4/6 mx-auto mt-48 flex justify-center items-center gap-10"
+    >
+      <div class="fifthPageImg">
+        <img
+          src="snap-screen.png"
+          alt=""
+          class="bg-[#f8e600] thirdImagePadding rounded-2xl"
+        />
+      </div>
+      <div class="fifthPageOthers">
+        <p class="mainText font-bold text-5xl mb-11">
+          Tired of reckless spending habits?
+        </p>
+        <div class="card">
+          <div class="card1 flex flex-col gap-10">
+            <div class="card11 flex flex-col gap-2">
+              <div
+                class="card11Img w-[72px] h-[72px] flex justify-center bg-[#f8e600] rounded-full"
+              >
+                <img width="32" height="20" src="tax.8ab97f20.svg" alt="" />
+              </div>
+              <p>
+                <span class="font-semibold">Scan your receipts</span>
+                <span class="opacity-50"
+                  >Use your camera to quickly capture expense details from your
+                  receipt.</span
+                >
+              </p>
+            </div>
+            <div class="card12 flex flex-col gap-2">
+              <div
+                class="card12Img w-[72px] h-[72px] flex justify-center bg-[#f8e600] rounded-full"
+              >
+                <img width="32" height="20" src="email.d78ff2f1.svg" alt="" />
+              </div>
+              <p>
+                <span class="font-semibold">Track email receipts</span>
+                <span class="opacity-50"
+                  >Forward receipts and invoices from your email to track your
+                  expenses.</span
+                >
+              </p>
+            </div>
+            <div class="card12 flex flex-col gap-2">
+              <div
+                class="card12Img w-[72px] h-[72px] flex justify-center bg-[#f8e600] rounded-full"
+              >
+                <img width="32" height="20" src="chat-ai.a4328c09.svg" alt="" />
+              </div>
+              <p>
+                <span class="font-semibold">Chat with receipt data</span>
+                <span class="opacity-50"
+                  >Use AI to learn more about your expense data and make better
+                  financial decisions.</span
+                >
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="m-7"></div>
+
+        <div class="thirdPageButton mt-12">
+          <button
+            class="bg-black text-white px-9 py-4 rounded-full font-medium shadow-lg"
+          >
+            Download app
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <!-- 6th section -->
+     <section class="w-4/6 mx-auto">
+      <p class="font-bold text-5xl text-center mt-48">Why people love Expenzia!!!</p>
+
+      <div class="ssCardContainer">
+        <div class="firstCard">
+          <div class="profileContainer flex items-center gap-3">
+            <div class="img w-11 h-11 rounded-full overflow-hidden">
+              <img class="w-full h-full object-cover" src="avatar_aOgsMJ-eZ.jpg" alt="">
+            </div>
+            <div class="profileCredentials">
+              <p class="font-semibold">JamesCodes</p>
+              <p>Technical Lead</p>
+            </div>
+          </div>
+          <div class="review">
+            <p></p>
+          </div>
+        </div>
+      </div>
+     </section>
   </body>
 </html>
